pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidBytes2.pkl
local num = 0xfff

res = Bytes(0, 1, 2, 3, num)
